fix text-align

--- a/src/nav-group-item/nav-group-item.less
+++ b/src/nav-group-item/nav-group-item.less
@@ -4,6 +4,7 @@
 	text-decoration: none;
 	justify-content: left;
 	align-items: center;
+	text-align: center;
 	color: @nav-group-item-color;
 	background-color: @nav-group-item-background-color;
 	padding: .5em 1.5em;
